pixel alignment fix

--- a/interface.css
+++ b/interface.css
@@ -25,7 +25,7 @@ body {
 #health-bar {
     width: 50%;
     max-width: 50vw;
-    min-width: 90px;
+    min-width: 95px;
     height: 20px;
     background-color: green; /* Set the default background color */
     border: 1px solid black; /* Add a border to the health bar */
